tests/paczka1/small_fuzzy/77921714.err
Error in line 8: ?A6~1
Error in line 11: XF1 A631 45,5
Error in line 6: i98 A16 23,9
Error in line 15: i98 A631 56,7
